# STM32WBA-Advanced-BLE-Broadcast-Speaker

./: CONTRIBUTING.md  LICENSE.md  README.md  Release_Notes.html
3D_Printings/: Speaker_body.stl  Speaker_bottom_cover.stl  Speaker_button_generic.stl  Speaker_button_minus.stl  Speaker_button_plus.stl  Speaker_top_cover_PMMA.dxf
Drivers/CMSIS/DSP/Lib/presets/: CMakeLists.txt  preset.FFTmax1024  preset.FFTmax128  preset.FFTmax2048  preset.FFTmax256  preset.FFTmax512  preset.common  preset.full
Drivers/CMSIS/DSP/Lib/presets/configs/: configLib.cmake  gcc.cmake
Utilities/Audio/: RELEASE_NOTES.md  release_notes.html
Utilities/CyclesCnt/: RELEASE_NOTES.md  cycles.c  cycles.h  cycles_conf_template.h  cycles_typedef.h  release_notes.html
Utilities/STFlashStorage/: RELEASE_NOTES.md  release_notes.html  st_flash_storage.c  st_flash_storage.h  st_flash_storage_template_H5_H7xxx.c  st_flash_storage_template_H7rsxx.c  st_flash_storage_template_N6570-DK.c
Utilities/STJson/: RELEASE_NOTES.md  release_notes.html  st_json.c  st_json.h  st_json_legacy.c  st_json_legacy.h  st_json_typedef.h
Utilities/STOs/: RELEASE_NOTES.md  release_notes.html  st_os.c  st_os.h  st_os_cmsis_v2.c  st_os_compiler_support.c  st_os_compiler_support.h  st_os_hl.c  st_os_hl.h  st_os_mem.c  st_os_mem.h  st_os_mem_conf_template.h  st_os_monitor_cpu.c  st_os_monitor_cpu.h  st_os_monitor_cpu_freertos_template.c  st_os_pool_conf_h7rsxxx_template.c  st_os_pool_conf_h7xxx_template.c  st_os_pool_conf_n6xxx_template.c
Utilities/STPmem/: RELEASE_NOTES.md  release_notes.html  st_pmem.c  st_pmem.h  (+2 more)
(+739 files in other folders)
